Rearranged Dockerfile to remove mysql-client after image setup and also removed logging from my.cnf because it was breaking the build.

--- a/etc/mysql/my.cnf
+++ b/etc/mysql/my.cnf
@@ -10,8 +10,9 @@ socket = /var/lib/mysql/mysql.sock
 
 [server]
 # Logging
-log = /proc/1/fd/1
-log-error = /proc/1/fd/2
+# @TODO: Fix these, they don't work
+# log = /proc/1/fd/1
+# log-error = /proc/1/fd/2
 
 # Basic Settings.
 user = mysql
